bin/testsuite/tests/compiler/src/errors/compiler4933.swg
#global testerror "Err0187"
#global export

public const A = 0